feat: initial setup of clean architecture

--- a/.gitignore
+++ b/.gitignore
@@ -40,7 +40,8 @@ ScaffoldingReadMe.txt
 ~$*
 *~
 CodeCoverage/
-
+.env
+.env*
 # MSBuild Binary and Structured Log
 *.binlog
 
@@ -52,3 +53,7 @@ CodeCoverage/
 *.VisualState.xml
 TestResult.xml
 nunit-*.xml
+
+# VsCode
+.DS_Store
+.vscode
