--- a/AccountService/src/AccountService.Api/AccountService.Api.csproj
+++ b/AccountService/src/AccountService.Api/AccountService.Api.csproj
@@ -7,12 +7,12 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.Extensions.Diagnostics.HealthChecks.EntityFrameworkCore" Version="10.0.1" />
     <PackageReference Include="Serilog.AspNetCore" Version="10.0.0" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="10.0.1" />
   </ItemGroup>
 
   <ItemGroup>
     <ProjectReference Include="../AccountService.Application/AccountService.Application.csproj" />
-    <ProjectReference Include="../AccountService.Infrastructure/AccountService.Infrastructure.csproj" />
   </ItemGroup>
 </Project>
