--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -13,18 +13,18 @@ services:
     depends_on:
       db:
         condition: service_healthy
-  accountservice:
-    build:
-      context: ./AccountService
-      dockerfile: Dockerfile
-      target: final
-    ports:
-      - 8080:8080
-    env_file:
-      - ./AccountService/.env
-    depends_on:
-      db:
-        condition: service_healthy
+  # accountservice:
+  #   build:
+  #     context: ./AccountService
+  #     dockerfile: Dockerfile
+  #     target: final
+  #   ports:
+  #     - 8080:8080
+  #   env_file:
+  #     - ./AccountService/.env
+  #   depends_on:
+  #     db:
+  #       condition: service_healthy
 
   db:
     image: postgres:18
