--- a/AuthService/src/AuthService.Server/appsettings.json
+++ b/AuthService/src/AuthService.Server/appsettings.json
@@ -5,5 +5,10 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
+  "Application": {
+    "SigningKey": "35235235",
+    "DatabaseConnection": "Host=db;Port=5432;Database=postgres;Username=auth_user;Password=auth_password",
+    "SelfUrl": "https://localhost:8085"
+  },
   "AllowedHosts": "*"
 }
