feat: account service, setting up jwt requirements and policies

--- a/AccountService/src/AccountService.Api/appsettings.Development.json
+++ b/AccountService/src/AccountService.Api/appsettings.Development.json
@@ -1,4 +1,8 @@
 {
+  "Authentication": {
+    "Authority": "https://localhost:8085",
+    "Audience": "api://account"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
