--- a/AccountService/src/AccountService.Api/appsettings.json
+++ b/AccountService/src/AccountService.Api/appsettings.json
@@ -1,4 +1,8 @@
 {
+  "Authentication": {
+    "Authority": "https://prod-url-to-auth-service",
+    "Audience": "api://account"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
