--- a/AuthService/src/AuthService.Server/appsettings.Development.json
+++ b/AuthService/src/AuthService.Server/appsettings.Development.json
@@ -1,4 +1,15 @@
 {
+   "Kestrel": {
+    "Endpoints": {
+      "Https": {
+        "Url": "https://*:8080",
+        "Certificate": {
+          "Path": "/https/dev.pfx",
+          "Password": "devpassword"
+        }
+      }
+    }
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
