--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,21 +7,26 @@ services:
       dockerfile: Dockerfile
       target: final
     ports:
-      - 8085:8080
+      - "8080:8080"
     env_file:
       - ./AuthService/.env
+    volumes:
+      - ./certs:/https:ro
     depends_on:
       db:
         condition: service_healthy
+
   # accountservice:
   #   build:
   #     context: ./AccountService
   #     dockerfile: Dockerfile
   #     target: final
   #   ports:
-  #     - 8080:8080
+  #     - 8081:8080
   #   env_file:
   #     - ./AccountService/.env
+  #   volumes:
+  #     - ./certs:/https:ro
   #   depends_on:
   #     db:
   #       condition: service_healthy
