--- a/AccountService/Dockerfile
+++ b/AccountService/Dockerfile
@@ -27,4 +27,6 @@ COPY --from=build /app .
 # and https://github.com/dotnet/dotnet-docker/discussions/4764
 USER $APP_UID
 
+EXPOSE 8080
+
 ENTRYPOINT ["dotnet", "AccountService.Api.dll"]
