--- a/AuthService/.env.example
+++ b/AuthService/.env.example
@@ -5,8 +5,24 @@ Google__ClientId="google-client-id"
 Google__ClientSecret="google-client-secret"
 ASPNETCORE_ENVIRONMENT="Development"
 
+Clients__PostmanClientId="open-id-postman"
+Clients__PostmanClientSecret="open-id-postman-secret"
+Clients__PostmanRedirectUri="https://oauth.pstmn.io/v1/callback"
+
+Clients__MiramaFrontendClientId="mirama-frontend-id"
+Clients__MiramaFrontendClientSecret="mirama-frontend-secret"
+Clients__MiramaFrontendRedirectUri="http://localhost:{frontend-port}/api/auth/callback/mirama"
+
 ### PRODUCTION SETUP ###
 Application__DatabaseConnection="service-specific-prod-db"
 ASPNETCORE_ENVIRONMENT="Production"
 ASPNETCORE_URLS="http://*:8080" # Kestrel will only listen to HTTP traffic, HTTPS should be terminated at proxy in prod
 Application__SelfUrl="https://auth.yourdomain.com" # This will be the issuer on the generated JWTs
+
+Clients__PostmanClientId="postman-cient-id"
+Clients__PostmanClientSecret="your-postman-secret-value"
+Clients__PostmanRedirectUri="https://oauth.pstmn.io/v1/callback"
+
+Clients__MiramaFrontendClientId="your-frontend-clientid"
+Clients__MiramaFrontendClientSecret="your-frontend-client-secret"
+Clients__MiramaFrontendRedirectUri="https://yourdomain.com/api/auth/callback/mirama"
