--- a/AuthService/src/AuthService.Server/AuthService.Server.csproj
+++ b/AuthService/src/AuthService.Server/AuthService.Server.csproj
@@ -23,4 +23,8 @@
     <PackageReference Include="OpenIddict.EntityFrameworkCore" Version="7.2.0" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\AuthService.Application\AuthService.Application.csproj" />
+  </ItemGroup>
+
 </Project>
