feat: auth service setting up proper exception handling middleware and structured serilog logging

--- a/AuthService/.env.example
+++ b/AuthService/.env.example
@@ -12,6 +12,7 @@ Clients__PostmanRedirectUri="https://oauth.pstmn.io/v1/callback"
 Clients__MiramaFrontendClientId="mirama-frontend-id"
 Clients__MiramaFrontendClientSecret="mirama-frontend-secret"
 Clients__MiramaFrontendRedirectUri="http://localhost:{frontend-port}/api/auth/callback/mirama"
+SERILOG__MINIMUMLEVEL__DEFAULT="Information"
 
 ### PRODUCTION SETUP ###
 Application__DatabaseConnection="service-specific-prod-db"
@@ -26,3 +27,4 @@ Clients__PostmanRedirectUri="https://oauth.pstmn.io/v1/callback"
 Clients__MiramaFrontendClientId="your-frontend-clientid"
 Clients__MiramaFrontendClientSecret="your-frontend-client-secret"
 Clients__MiramaFrontendRedirectUri="https://yourdomain.com/api/auth/callback/mirama"
+SERILOG__MINIMUMLEVEL__DEFAULT="Information" # Set here to be able to dynamically adjust at runtime
