--- a/AuthService/src/AuthService.Server/appsettings.Development.json
+++ b/AuthService/src/AuthService.Server/appsettings.Development.json
@@ -1,5 +1,5 @@
 {
-   "Kestrel": {
+  "Kestrel": {
     "Endpoints": {
       "Https": {
         "Url": "https://*:8080",
@@ -10,10 +10,23 @@
       }
     }
   },
-  "Logging": {
-    "LogLevel": {
+  "Serilog": {
+    "Using": [ "Serilog.Exceptions" ],
+    "Enrich": [ "WithExceptionDetails" ],
+    "MinimumLevel": {
       "Default": "Information",
-      "Microsoft.AspNetCore": "Warning"
-    }
+      "Override": {
+        "Microsoft": "Warning",
+        "System": "Warning"
+      }
+    },
+    "WriteTo": [
+      {
+        "Name": "Console",
+        "Args": {
+          "outputTemplate": "{Timestamp:HH:mm:ss} [{Level:u3}] {CorrId:CorrelationId} {RequestMethod} {RequestPath} {StatusCode} {Message:lj}{NewLine}{Exception}"
+        }
+      }
+    ]
   }
 }
