feat: internal token service and development automatic cert generation

--- a/AuthService/src/AuthService.Server/appsettings.Development.json
+++ b/AuthService/src/AuthService.Server/appsettings.Development.json
@@ -4,7 +4,7 @@
       "Https": {
         "Url": "https://*:8080",
         "Certificate": {
-          "Path": "/https/dev.pfx",
+          "Path": "/certificates/dev.pfx",
           "Password": "devpassword"
         }
       }
