--- a/AuthService/.env.example
+++ b/AuthService/.env.example
@@ -12,7 +12,14 @@ Clients__PostmanRedirectUri="https://oauth.pstmn.io/v1/callback"
 Clients__MiramaFrontendClientId="mirama-frontend-id"
 Clients__MiramaFrontendClientSecret="mirama-frontend-secret"
 Clients__MiramaFrontendRedirectUri="http://localhost:{frontend-port}/api/auth/callback/mirama"
+
 SERILOG__MINIMUMLEVEL__DEFAULT="Information"
+
+Openiddict__Issuer="https://localhost:8080"
+Openiddict__SigningCertificatePath="/certificates/signing.pfx"
+Openiddict__SigningCertificatePassword="devsigningpassword"
+Openiddict__EncryptionCertificatePath="/certificates/encryption.pfx"
+Openiddict__EncryptionCertificatePassword="devencryptionpassword"
 
 ### PRODUCTION SETUP ###
 Application__DatabaseConnection="service-specific-prod-db"
@@ -27,4 +34,7 @@ Clients__PostmanRedirectUri="https://oauth.pstmn.io/v1/callback"
 Clients__MiramaFrontendClientId="your-frontend-clientid"
 Clients__MiramaFrontendClientSecret="your-frontend-client-secret"
 Clients__MiramaFrontendRedirectUri="https://yourdomain.com/api/auth/callback/mirama"
+
 SERILOG__MINIMUMLEVEL__DEFAULT="Information" # Set here to be able to dynamically adjust at runtime
+
+Openiddict__Issuer="https://auth.yourdomain.com"
