--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -11,7 +11,7 @@ services:
     env_file:
       - ./AuthService/.env
     volumes:
-      - ./certs:/https:ro
+      - ./certs:/certificates
     depends_on:
       db:
         condition: service_healthy
