feat: updating account service to match new authentication specifics, forcing https

--- a/AccountService/src/AccountService.Api/appsettings.Development.json
+++ b/AccountService/src/AccountService.Api/appsettings.Development.json
@@ -1,12 +1,36 @@
 {
+  "Kestrel": {
+    "Endpoints": {
+      "Https": {
+        "Url": "https://*:8080",
+        "Certificate": {
+          "Path": "/certificates/dev.pfx",
+          "Password": "devpassword"
+        }
+      }
+    }
+  },
   "Authentication": {
     "Authority": "https://localhost:8080",
     "Audience": "api://account"
   },
-  "Logging": {
-    "LogLevel": {
+  "Serilog": {
+    "Using": [ "Serilog.Exceptions" ],
+    "Enrich": [ "WithExceptionDetails" ],
+    "MinimumLevel": {
       "Default": "Information",
-      "Microsoft.AspNetCore": "Warning"
-    }
+      "Override": {
+        "Microsoft": "Warning",
+        "System": "Warning"
+      }
+    },
+    "WriteTo": [
+      {
+        "Name": "Console",
+        "Args": {
+          "outputTemplate": "{Timestamp:HH:mm:ss} [{Level:u3}] {CorrId:CorrelationId} {RequestMethod} {RequestPath} {StatusCode} {Message:lj}{NewLine}{Exception}"
+        }
+      }
+    ]
   }
 }
