--- a/AuthService/.env.example
+++ b/AuthService/.env.example
@@ -21,6 +21,8 @@ Openiddict__SigningCertificatePassword="devsigningpassword"
 Openiddict__EncryptionCertificatePath="/certificates/encryption.pfx"
 Openiddict__EncryptionCertificatePassword="devencryptionpassword"
 
+AccountService__ApiUrl="https://localhost:8081"
+
 ### PRODUCTION SETUP ###
 Application__DatabaseConnection="service-specific-prod-db"
 ASPNETCORE_ENVIRONMENT="Production"
@@ -38,3 +40,5 @@ Clients__MiramaFrontendRedirectUri="https://yourdomain.com/api/auth/callback/mir
 SERILOG__MINIMUMLEVEL__DEFAULT="Information" # Set here to be able to dynamically adjust at runtime
 
 Openiddict__Issuer="https://auth.yourdomain.com"
+
+AccountService__ApiUrl="http(s)://account.yourdomain.com"
