--- a/DocsService/mkdocs.yml
+++ b/DocsService/mkdocs.yml
@@ -9,20 +9,36 @@ theme:
     - navigation.instant
     - navigation.sections
     - navigation.tracking
+    # - navigation.footer
+    - navigation.indexes
+    - navigation.top
+    - navigation.tabs
     - search.highlight
     - search.share
+    - search.suggest
     - content.code.copy
     - content.tabs.link
-  palette:
-    - scheme: default
-      toggle:
-        icon: material/weather-night
-        name: Dark mode
-    - scheme: slate
-      toggle:
-        icon: material/weather-sunny
-        name: Light mode
+    - content.tooltips
 
+  palette:
+    - media: "(prefers-color-scheme: light)"
+      scheme: default
+      primary: dark blue
+      accent: red
+      toggle:
+        icon: material/brightness-7
+        name: Switch to dark mode
+
+    - media: "(prefers-color-scheme: dark)"
+      scheme: slate
+      primary: dark blue
+      accent: red
+      toggle:
+        icon: material/brightness-4
+        name: Switch to light mode
+extra:
+  generator: false
+  
 plugins:
   - search
   - awesome-pages
@@ -49,3 +65,6 @@ markdown_extensions:
 
 extra_javascript:
   - https://unpkg.com/mermaid/dist/mermaid.min.js
+
+repo_url: https://github.com/yannickullisch
+repo_name: YannickUllisch
